--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 version: "3"
 services:
-#    db:
-#        image: mysql
-#        container_name: "mysql-container"
-#        command: --default-authentication-plugin=mysql_native_password
-#        restart: always
-#        ports:
-#        - "3306:3306"
-#        environment:
-#            MYSQL_ROOT_PASSWORD: teste
-#            MYSQL_DATABASE: teste
+    db:
+        image: mysql
+        container_name: "mysql"
+        command: --default-authentication-plugin=mysql_native_password
+        restart: always
+        ports:
+        - "3306:3306"
+        environment:
+            MYSQL_ROOT_PASSWORD: teste
+            MYSQL_DATABASE: teste
 #        volumes:
 #            - ./db/MySql:/var/lib/mysql
     zookeeper:
@@ -27,25 +27,11 @@ services:
         environment:
             - KAFKA_BROKER_ID=1
             - KAFKA_LISTENERS=PLAINTEXT://:9092
-            - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka-server:9092
+            - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
             - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
             - ALLOW_PLAINTEXT_LISTENER=yes
         depends_on:
             - zookeeper
-#    rabbit:
-#        image: rabbitmq:3-management
-#        container_name: "rabbitmq-server"
-#        ports:
-#            - "5672:5672"
-#            - "15672:15672"
-#        network_mode: "bridge"
-#        environment:
-#            - RABBITMQ_ERLANG_COOKIE=This_is_my_secret_phrase
-#            - RABBITMQ_DEFAULT_USER=mqadmin
-#            - RABBITMQ_DEFAULT_PASS=Admin123XX_
-#            - CLUSTERED=true
-#        depends_on:
-#          - kafka
     cad-client:
         container_name: "cad-client"
         image: amd64/gradle:jdk14
@@ -53,56 +39,10 @@ services:
             - ./cad-client:/home/cad-client
         working_dir: /home/cad-client
         ports:
-            - "666:8080"
+            - "80:8080"
         command: ["./gradlew", "bootRun"]
         depends_on:
-#          - db
-          - kafka
-          - zookeeper
+            - db
+            - kafka
+            - zookeeper
         restart: always
-#    com-assinatura:
-#        container_name: "com-assinatura"
-#        image: amd64/gradle:jdk14
-#        volumes:
-#            - ./com-assinatura:/home/com-assinatura
-#        working_dir: /home/com-assinatura
-#        command: ["./gradlew", "bootRun"]
-#        depends_on:
-##            - db
-#            - kafka
-#        restart: always
-#    assinar:
-#        container_name: "assinar"
-#        image: amd64/gradle:jdk14
-#        volumes:
-#            - ./assinar:/home/assinar
-#        working_dir: /home/assinar
-#        ports:
-#            - "8090:8080"
-#        command: ["./gradlew", "bootRun"]
-#        depends_on:
-##            - db
-#            - kafka
-#        restart: always
-#    processar-pagamento:
-#        container_name: "processar-pagamento"
-#        image: amd64/gradle:jdk14
-#        volumes:
-#            - ./processar-pagamento:/home/processar-pagamento
-#        working_dir: /home/processar-pagamento
-#        command: ["./gradlew", "bootRun"]
-#        depends_on:
-##            - db
-#            - kafka
-#        restart: always
-#    finaliza-pagamento:
-#        container_name: "finaliza-pagamento"
-#        image: amd64/gradle:jdk14
-#        volumes:
-#            - ./finaliza-pagamento:/home/finaliza-pagamento
-#        working_dir: /home/finaliza-pagamento
-#        command: ["./gradlew", "bootRun"]
-#        depends_on:
-##            - db
-#            - kafka
-#        restart: always
