--- a/finaliza-pagamento/src/main/resources/application.yml
+++ b/finaliza-pagamento/src/main/resources/application.yml
@@ -6,7 +6,8 @@ spring:
   cloud:
     stream:
       default:
-        consumer: true
+        consumer:
+          useNativeEncoding: true
       bindings:
         input:
           destination: 'assinatura-finalizar'
