--- a/cad-client/src/main/resources/application.yml
+++ b/cad-client/src/main/resources/application.yml
@@ -3,9 +3,9 @@ server:
 spring:
   kafka:
     defaultBrokerPort: 9092
-    bootstrap-servers: 'kafka:9092'
+    bootstrap-servers: '192.168.99.103:9092'
   datasource:
-    url: 'jdbc:mysql://mysql/teste?useSSL=false'
+    url: 'jdbc:mysql://192.168.99.103/teste?useSSL=false'
     username: root
     password: teste
   jpa:
@@ -15,16 +15,16 @@ spring:
       hibernate:
         dialect: 'org.hibernate.dialect.MySQL5InnoDBDialect'
 
-
   cloud:
     stream:
       bindings:
         output:
+          group-id: 'comunicacao'
           destination: 'assinatura-comunicacao'
           content-type: application/json
       kafka:
         binder:
-          brokers: kafka:9092
+          brokers: 192.168.99.103:9092
           producer-properties:
             key.serializer: org.apache.kafka.common.serialization.StringSerializer
             value.serializer: org.springframework.kafka.support.serializer.JsonSerializer
