--- a/com-assinatura/src/main/resources/application.yml
+++ b/com-assinatura/src/main/resources/application.yml
@@ -1,20 +1,30 @@
 spring:
   kafka:
     defaultBrokerPort: 9092
-    bootstrap-servers: 'kafka:9092'
+    bootstrap-servers: '192.168.99.103:9092'
+    consumer:
+      group-id: 'comunicacao'
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring:
+          json:
+            trusted:
+              packages: '*'
+
 
   cloud:
     stream:
       default:
-        consumer: true
+        consumer:
+          useNativeEncoding: true
       bindings:
         input:
           destination: 'assinatura-comunicacao'
-          binder: 'kafka'
           content-type: application/json
       kafka:
         binder:
-          brokers: 'kafka:9092'
+          brokers: 192.168.99.103:9092
           consumer-properties:
-            key-deserializer: 'org.apache.kafka.common.serialization.StringDeserializer'
-            value-deserializer: 'org.apache.kafka.common.serialization.JsonDeserializer'
+            key.deserializer: org.apache.kafka.common.serialization.StringDeserializer
+            value.deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
