--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,22 +27,35 @@ services:
         environment:
             - KAFKA_BROKER_ID=1
             - KAFKA_LISTENERS=PLAINTEXT://:9092
-            - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
+            - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://192.168.99.103:9092
             - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
             - ALLOW_PLAINTEXT_LISTENER=yes
         depends_on:
             - zookeeper
-    cad-client:
-        container_name: "cad-client"
-        image: amd64/gradle:jdk14
-        volumes:
-            - ./cad-client:/home/cad-client
-        working_dir: /home/cad-client
-        ports:
-            - "80:8080"
-        command: ["./gradlew", "bootRun"]
-        depends_on:
-            - db
-            - kafka
-            - zookeeper
-        restart: always
+        extra_hosts:
+            - "192.168.99.103:127.0.0.1"
+#    cad-client:
+#        container_name: "cad-client"
+#        image: amd64/gradle:jdk14
+#        volumes:
+#            - ./cad-client:/home/cad-client
+#        working_dir: /home/cad-client
+#        ports:
+#            - "80:8080"
+#        command: ["./gradlew", "bootRun"]
+#        depends_on:
+#            - db
+#            - kafka
+#            - zookeeper
+#        restart: always
+#    com-assinatura:
+#        container_name: "com-assinatura"
+#        image: amd64/gradle:jdk14
+#        volumes:
+#            - ./com-assinatura:/home/com-assinatura
+#        working_dir: /home/com-assinatura
+#        command: ["./gradlew", "bootRun"]
+#        depends_on:
+#            - kafka
+#            - zookeeper
+#        restart: always
